; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_utils.c_ts_get_operator.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_utils.c_ts_get_operator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidOid = common dso_local global i32 0, align 4
@OPERNAMENSP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_get_operator(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @InvalidOid, align 4
  store i32 %11, i32* %10, align 4
  %12 = load i32, i32* @OPERNAMENSP, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @PointerGetDatum(i8* %13)
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @ObjectIdGetDatum(i32 %15)
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @ObjectIdGetDatum(i32 %17)
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @ObjectIdGetDatum(i32 %19)
  %21 = call i32 @SearchSysCache4(i32 %12, i32 %14, i32 %16, i32 %18, i32 %20)
  store i32 %21, i32* %9, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i64 @HeapTupleIsValid(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %4
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @HeapTupleGetOid(i32 %26)
  store i32 %27, i32* %10, align 4
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @ReleaseSysCache(i32 %28)
  br label %30

30:                                               ; preds = %25, %4
  %31 = load i32, i32* %10, align 4
  ret i32 %31
}

declare dso_local i32 @SearchSysCache4(i32, i32, i32, i32, i32) #1

declare dso_local i32 @PointerGetDatum(i8*) #1

declare dso_local i32 @ObjectIdGetDatum(i32) #1

declare dso_local i64 @HeapTupleIsValid(i32) #1

declare dso_local i32 @HeapTupleGetOid(i32) #1

declare dso_local i32 @ReleaseSysCache(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
